RESOLVED FIXED84960
[GTK] Test WebKit2.RestoreSessionStateContainingFormData fails
https://bugs.webkit.org/show_bug.cgi?id=84960
Summary [GTK] Test WebKit2.RestoreSessionStateContainingFormData fails
Carlos Garcia Campos
Reported 2012-04-26 07:52:53 PDT
Session State is not implemented in GTK+ port
Attachments
Patch (26.07 KB, patch)
2015-09-26 20:20 PDT, Sam P.
cgarcia: review-
cgarcia: commit-queue-
Patch (5.45 KB, patch)
2015-10-08 23:41 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2015-09-18 00:02:58 PDT
The test crashes because it uses WKSessionStateCopyData() that requires an implementation of WebKit::encodeLegacySessionState(). The default implementation returns NULL.
Sam P.
Comment 2 2015-09-26 03:19:37 PDT
How do you actually run this test? I have worked on an implementation of this ap and tested it with minibrowser, however, I can not find documentation on how to run these type of tests.
Michael Catanzaro
Comment 3 2015-09-26 07:13:37 PDT
Hi, thanks for working on this. Use the script Tools/Scripts/run-gtk-tests to run the tests. You will need to remove this test from the list of skipped tests up towards the top of that file. That will run all the tests, though; I can't remember if I ever found a way to run a single cross-platform test or not.
Sam P.
Comment 4 2015-09-26 20:20:16 PDT
Michael Catanzaro
Comment 5 2015-10-08 18:25:04 PDT
View in context: https://bugs.webkit.org/attachment.cgi?id=261985&action=review > Source/WebKit2/ChangeLog:8 > + This commit adds an implimentation of the LegacySessionStateCoding. It is based off of implementation > Source/WebKit2/ChangeLog:9 > + the mac implimentation, however instead of using core foundation dictionaries it uses Ditto > Source/WebKit2/PlatformGTK.cmake:367 > + UIProcess/LegacySessionStateCodingNone.cpp Instead of doing this, let's remove it from CMakeLists.txt and add it manually to all the other Platform*.cmake files.
Carlos Garcia Campos
Comment 6 2015-10-08 23:30:56 PDT
*** Bug 88455 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 7 2015-10-08 23:36:42 PDT
Comment on attachment 261985 [details] Patch I'm sorry if I didn't explain it correctly, I didn't mean we needed a new implementation of the legacy decoders. Those are there only for compatibility with Safari, but still used by the unit tests. We already have a cross-platform implementation of the SessionState, so we don't need to copy the mac legacy encoders/decoders, but simply use the new implementation.
Carlos Garcia Campos
Comment 8 2015-10-08 23:41:59 PDT
Created attachment 262753 [details] Patch This is what I meant
Sam P.
Comment 9 2015-10-08 23:46:23 PDT
That looks great!
Zan Dobersek
Comment 10 2015-10-15 01:01:02 PDT
Comment on attachment 262753 [details] Patch r=me
Carlos Garcia Campos
Comment 11 2015-10-15 01:19:42 PDT
Note You need to log in before you can comment on or make changes to this bug.