[GTK] Test WebKit2.RestoreSessionStateContainingFormData fails https://bugs.webkit.org/show_bug.cgi?id=84960

Reviewed by Žan Doberšek.

Source/WebKit2:

Add a cross-platform implementation to LegacySessionStateCodingNone
using the new SessionState, so that non mac ports can make unit
tests that use the legacy session state coding pass.

* UIProcess/LegacySessionStateCodingNone.cpp:
(WebKit::encodeLegacySessionState):
(WebKit::decodeLegacySessionState):
(WebKit::encodeLegacySessionHistoryEntryData): Deleted.
(WebKit::decodeLegacySessionHistoryEntryData): Deleted.

Tools:

* Scripts/run-gtk-tests:
(TestRunner): Unskip tests using SessionState.
* TestWebKitAPI/PlatformGTK.cmake: Add
WKPageCopySessionStateWithFiltering test.

Canonical link: https://commits.webkit.org/168295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191103 268f45cc-cd09-0410-ab3c-d52691b4dbfc